force-app/main/default/objects/B25__Reservation__c/fields/Deposit_Installment__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit Installment</label>
    <referenceTo>cpm__Installment__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>