force-app/main/default/objects/B25__Reservation__c/fields/Deposit_Installment_Status__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Installment_Status__c</fullName>
    <formula>TEXT(Deposit_Installment__r.cpm__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Installment Status</label>
    <type>Text</type>
</CustomField>