force-app/main/default/objects/B25__Reservation__c/fields/Deposit_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Payment_Link__c</fullName>
    <formula>Deposit_Installment__r.cpm__Pay_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Payment Link</label>
    <type>Text</type>
</CustomField>