force-app/main/default/objects/B25__Reservation__c/fields/Remainder__c.field-meta.xml
<CustomField>
    <fullName>Remainder__c</fullName>
    <formula>B25__Total_Price__c - IF(ISBLANK( Deposit_Amount__c) , 0, Deposit_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remainder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>