force-app/main/default/objects/B25__Reservation__c/fields/Remainder_Installment__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remainder Installment</label>
    <referenceTo>cpm__Installment__c</referenceTo>
    <relationshipLabel>Reservations (Remainder Installment)</relationshipLabel>
    <relationshipName>Reservations1</relationshipName>
    <type>Lookup</type>
</CustomField>