force-app/main/default/objects/B25__Reservation__c/fields/Remainder_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Payment_Link__c</fullName>
    <formula>Remainder_Installment__r.cpm__Pay_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remainder Payment Link</label>
    <type>Text</type>
</CustomField>