force-app/main/default/objects/B25__Reservation__c/fields/Remained_Installment_Status__c.field-meta.xml
<CustomField>
    <fullName>Remained_Installment_Status__c</fullName>
    <formula>TEXT(Remainder_Installment__r.cpm__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remained Installment Status</label>
    <type>Text</type>
</CustomField>