force-app/main/default/objects/B25__Reservation__c/fields/Reservation_Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Is_Paid__c</fullName>
    <formula>IF ( AND( OR(Deposit_Installment_Status__c = &apos;Collected&apos;,  Deposit_Amount__c = 0), OR ( Remained_Installment_Status__c = &apos;Collected&apos;,  Remainder__c = 0)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservation Is Paid</label>
    <type>Checkbox</type>
</CustomField>